Portfoliov2.css
html, body{
   padding: 0;
   margin: 0;
   font-family: 'Lato', sans-serif;
}

h1 {
	font-size: 3rem;
	color: white;
	margin: auto;
}


h2 {
	font-size: 5rem;
	color: black;
	margin: 0 auto;
}

i {
	color: black;
}

a {
	text-decoration: none;
}

.horizontal-line {
	height: 0.75rem;
	background: white;
	width: 150%;
	margin: center;

}
/* Navbar*/

#container{
	display: flex;
	justify-content: space-around;
	align-items: center;
	position: fixed;
	background: #FFFAFA;
	width: 100%;
	padding: 1rem;
	z-index: 1;
}

.link-container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: nowrap;
}

.nav-link {
	margin-right: 1rem;
}


#navbar{

}

/*Welcome section*/

#welcome-section{
	display: flex;
	height: 100vh;
	background-image: url("https://static.pexels.com/photos/21787/pexels-photo.jpg");
	background-size: cover;
	background-attachment: fixed;
	align-items: center;
	justify-content: center;
	margin: 0 auto;
	
}



/*Projects */
#projects{
	padding-top: 5rem;
	padding-bottom: 15rem;
	background-color: #FFFAFA;
flex-direction: column;
	justify-content: center;
	margin: 0 auto;
	display: flex;
	
}


#projects_container{
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	flex-wrap: wrap;

}

.project-tile{
	height: 80%;
	width: 60%;
	margin: auto;
	overflow: hidden;
	position: relative;
	/*background-image: url("https://upload.wikimedia.org/wikipedia/commons/6/62/ImagePlaceholder_icon.svg");*/
	background-repeat: no-repeat;
	

}
.tile-text {
	position: absolute;
	top: 100px;
    bottom: 0;
    left: 60px;
    right: 0;
    color: #4ABDAC; /*#FFFAFA*/
    font-size: 125%;
}
.project-tile:hover {
	opacity: 0.2;
}

.project-tile-link{
	display: block;
}

#contact{
	padding-top: 1rem;
	padding-bottom: 1rem;
	background-color: #4ABDAC;
	align-items: center;
	justify-content: center;
	margin: 0 auto;
	display: flex;
	flex-direction: column;
	height: 100vh;
	
	}
 #contact-header{
	color: white;
}
.contact-container{
	padding-top: 5rem;
	padding-bottom: 5rem;
	margin: 0 auto;
	display: flex;
	justify-content: space-between;
	flex-direction: column;
}


.sm-button{
	height: 6rem;
	width: 18rem;
	background-color: white;
	display: flex;
	justify-content: flex-start;
	align-items: center;
	padding-left: 1em;
	margin-right: 1em;
	margin-bottom: 1em;
	transition: background-color 0.5s ease;
	 }
.sm-button:hover {
	opacity: 0.2;
}
 .navbar-text {
	display: none;
	}
 


@media (min-width: 37.5em) {
	

.contact-container{
	
	flex-direction: row;

}

.project-tile{
	
	width: 50%;
	
}

.tile-text {
	position: absolute;
	top: 100px;
    bottom: 0;
    left: 100px;
    right: 0;
    color: #4ABDAC; /*#FFFAFA*/
    font-size: 125%;
}

}

@media (min-width: 50em) {
	#projects_container {
		flex-direction: row;
		/*margin-left: 50px;*/
		font-size: 145%;
	}
	#unhide-text {
 	display: inline;
}

.contact-container{
	
	flex-direction: row;
}

.project-tile{
	
	width: 33%;
	
}

.tile-text {
	position: absolute;
	top: 120px;
    bottom: 0;
    left: 70px;
    right: 0;
    color: #4ABDAC; /*#FFFAFA*/
    font-size: 150%;
}

}

